--- a/styles/style.css
+++ b/styles/style.css
@@ -3,3 +3,36 @@
   box-sizing:border-box;  
 }
 
+@font-face {
+	font-family: "Montserrat";
+	src: url(Montserrat-Medium.ttf);
+}
+
+body {
+	background-color: #FAF9EC;
+}
+
+.top-nav {
+	list-style-type: none;
+	padding: 2em 1em 0;
+    width: 100%;
+    margin: 0 auto;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 0.75em;
+    text-transform: uppercase;
+    display: flex;
+	justify-content: space-between;
+	align-items: center
+}
+
+.top-nav li {
+	display: flex;
+    margin: 0;
+    padding: 0;
+}
+
+.top-nav li a {
+	padding: 15px 10px;
+	text-decoration: none;
+	color: #1A1818;
+}
