--- a/styles/style.css
+++ b/styles/style.css
@@ -83,10 +83,10 @@ nav:first-of-type li a, header nav:nth-of-type(2) li a {
 	font-size: 0.8em;
 }
 
-nav:first-of-type a, nav:nth-of-type(2) a {
+nav:first-of-type li a, nav:nth-of-type(2) li a {
       position: relative;
       text-decoration: none;
-      
+
     }
     a::before, a::after {
       position: absolute;
