--- a/styles/style.css
+++ b/styles/style.css
@@ -3,11 +3,6 @@
   box-sizing:border-box;  
 }
 
-/*@font-face {
-	font-family: "Montserrat";
-	src: url(Montserrat-Medium.ttf);
-}*/
-
 body {
 	background-color: #FAF9EC;
 	margin: 0;
@@ -49,11 +44,6 @@ body > nav:first-of-type {
 	align-items: center;
 }
 
-/*body nav:first-of-type ul:first-of-type a:hover {
-	color: #5667EB;
-	text-decoration: underline;
-}*/
-
 body nav:nth-of-type(2) a {
 	padding-top: 2em;
 }
@@ -78,7 +68,7 @@ nav li:not(:last-child) {
 	margin-right: 1.4em;
 }
 
-nav:first-of-type li a, header nav:first-of-type li a {
+nav:first-of-type li a, header nav:first-of-type li a{
 	padding: 15px 10px;
 	text-decoration: none;
 	color: #1A1818;
@@ -86,11 +76,10 @@ nav:first-of-type li a, header nav:first-of-type li a {
 }
 
 nav:first-of-type li a, nav:nth-of-type(2) li a {
-      position: relative;
-      text-decoration: none;
+     text-decoration: none;
 }
 
-nav ul:first-of-type li a::after, nav:nth-of-type(2) li a::after {
+nav ul:first-of-type li a::after, nav:nth-of-type(2) li a::after, footer a::after {
 	content: "";
 	display: block;
 	width: 0;
@@ -99,11 +88,11 @@ nav ul:first-of-type li a::after, nav:nth-of-type(2) li a::after {
 	transition: width 0.3s;
 }
 
-nav ul:first-of-type li a:hover::after, nav:nth-of-type(2) li a:hover::after {
+nav ul:first-of-type li a:hover::after, nav:nth-of-type(2) li a:hover::after, footer a:hover::after {
 	width: 100%;
 	transition: .3s;
 }
-nav ul:first-of-type li a:hover, nav:nth-of-type(2) li a:hover {
+nav ul:first-of-type li a:hover, nav:nth-of-type(2) li a:hover, footer a:hover {
 	color: #5667EB;
 }
 
@@ -128,53 +117,7 @@ figure:first-of-type img {
     right: 1.7em;
 }
 
-
-/*MAIN*/
-main {
-	padding-top: 2em;
-	padding-left: 2.3em;
-	padding-right: 2.3em;
-	margin: 0 auto;
-}
-
-/*BEAUTY AND FASHION*/
-article {
-	border-top: 2px solid  #1A1818;
-	padding-top: 2em;
-	padding-bottom: 3em;
-	display: grid;
-	margin: 0 auto;
-	column-gap: 3em;
-
-}
-
-/*.article-container {
-	display: grid;
-	/*grid-template-columns: repeat(1, 1fr);
-	margin: 0 auto;
-	/*border-top: 2px solid  #1A1818;
-	padding-top: 2em;
-	padding-bottom: 3em;
-}*/
-
-article div:first-of-type {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-}
-
-/*article div:first-of-type a {
-	display: flex;
-	justify-content: center;
-	width: 100%;
-}*/
-
-article div:nth-of-type(2) {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	text-align: center;
-}
+/*MOBILE NAV*/
 
 #mobile-nav {
 	display: block;
@@ -199,6 +142,8 @@ article div:nth-of-type(2) {
 	width: 2em;
 }
 
+
+/*MOBILE MENU*/
 
 #mobile-menu {
 	position: fixed;
@@ -274,6 +219,37 @@ article div:nth-of-type(2) {
 
 #mobile-menu ul img {
 	width: 1em;
+}
+
+/*MAIN*/
+main {
+	padding-top: 2em;
+	padding-left: 2.3em;
+	padding-right: 2.3em;
+	margin: 0 auto;
+}
+
+/*BEAUTY AND FASHION*/
+article {
+	border-top: 2px solid  #1A1818;
+	padding-top: 2em;
+	padding-bottom: 3em;
+	display: grid;
+	margin: 0 auto;
+	column-gap: 3em;
+}
+
+article div:first-of-type {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+article div:nth-of-type(2) {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	text-align: center;
 }
 
 article img {
@@ -417,7 +393,7 @@ article:nth-of-type(3) button {
 	max-width: 300px;
 }
 
-/*section*/
+/*SECTIONS*/
 main section {
 	border-bottom: 3px solid #1A1818;
 	padding-top: 3em;
@@ -433,9 +409,6 @@ main section div:nth-of-type(2) p{
 	text-align: center;
 	font-weight: 300;
 }
-
-
-/*section 2*/
 
 main section div:first-of-type h2{
 	text-shadow: none;
@@ -478,7 +451,7 @@ form {
     max-width: 350px;
  }
 
-input[type="email"] {
+#email-adress {
 	border: 0;
     outline: none;
     width: 100%;
@@ -525,7 +498,7 @@ input[type="submit"]:hover {
 	}
 
 
-/*footer*/
+/*FOOTER*/
 
 footer {
 	font-family: "Montserrat";
@@ -562,6 +535,11 @@ footer section:first-of-type li {
 	padding-bottom: 1.5em;
 }
 
+footer li a {
+	text-decoration: none;
+	color: #1A1818;
+}
+
 footer section:nth-of-type(2) {
 	background-color: #1F1E1D;
 	color: #FAF9EC;
@@ -582,7 +560,146 @@ footer h4 a{
 	font-size: 1.2em;
 }
 
-/*MEDIA QUERY*/
+/*BEAUTY & SKINCARE PAGINA*/
+
+.beauty-h2 {
+    text-shadow: none;
+    font-size: clamp(1.1em, 4vw, 1.5em);
+    font-weight: 600;
+    letter-spacing: 2px;
+    border-bottom: 3px solid black;
+    padding-bottom: 1em;
+    padding-top: 2em;
+}
+
+.beauty-h3 {
+	text-align: center;
+    max-width: 20em;
+    margin: 2em auto;
+    margin-bottom: 1.5em;
+    text-transform: capitalize;
+}
+
+.beauty-p {
+	font-size: clamp(0.837em, 2vw, 0.837em);
+    text-align: center;
+    font-weight: 500;
+    letter-spacing: .1em;
+}
+
+.beauty-figure {
+	margin: 0!important;
+}
+
+.beauty-figure img {
+	position: static !important;
+	height: 100vw !important;
+	object-fit: cover!important;
+	border: 2px solid black;
+}
+
+.beauty-section {
+	margin: 0 auto;
+	padding-top: 1em;
+    padding-bottom: 6em;
+}
+
+.beauty-section p {
+	font-size: clamp(0.837em, 2vw, 0.938em);
+}
+
+.beauty-section img {
+	width: 100%;
+    height: 100vw;
+    object-fit: cover;
+}
+
+.beauty-section:first-of-type {
+	margin-top: 6em;
+	border-top: 1px solid black;
+}
+
+.beauty-section:nth-of-type(3) {
+	padding-top: 3em;
+}
+
+h4 {
+	text-transform: uppercase;
+	font-family: Poppins, sans-serif;
+	font-weight: 700;
+	font-style: normal;
+	font-size: clamp(1em, 4vw, 1.5em);
+    line-height: 2em;
+}
+
+h5:first-of-type {
+	text-transform: uppercase;
+    font-family: Poppins, sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: clamp(1.3em, 4vw, 1.7em);
+    line-height: 2em;
+    text-align: center;
+    margin-top: 1em;
+}
+
+#comment-h5 {  
+	font-family: "montserrat", sans-serif;
+    font-size: clamp(0.8em, 3vw, 1em);
+    margin-bottom: 2em;
+    text-align: left;
+    letter-spacing: 0.1em;
+}
+
+h6 {
+	font-family: gastromond, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: clamp(1.375em, 3vw, 2em);
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.comment {
+	margin: 0 auto;
+	max-width: 100%;
+}
+input[type=text], textarea, #comment-email {
+  	width: 100%;
+    padding: 0.8em;
+    border: 1px solid black;
+    margin-bottom: 1em;
+    height: 3.5em;
+}
+
+label {
+	font-family: "montserrat", sans-serif;
+	font-size: 0.8em;
+	text-transform: uppercase;
+	letter-spacing: 0.1em;
+}
+
+textarea {
+	height: 17em;
+}
+
+#submit-comment {
+    width: auto;
+    border: 3px solid black;
+    padding: 1em 3em;
+}
+
+.beauty-section:nth-of-type(2) img {
+    width: 47%;
+    height: 45vw;
+    object-fit: cover;
+    margin: 0 auto;
+    display: block;
+    border:3px solid black;
+ }
+
+/*MEDIA QUERIES*/
 @media (max-width: 439px) {
 	main {
 		max-width: 100%;
@@ -596,16 +713,6 @@ footer h4 a{
 }
 
 @media (min-width: 768px) {
-	/*.article-container {
-		max-width: unset;
-		grid-template-columns: repeat(2, 1fr);
-	}
-
-	body .article-content {
-		text-align: unset;
-		max-width: unset;
-		padding-left: 2em;
-	}*/
 
 	main {
 		max-width: 900px;
@@ -670,14 +777,15 @@ footer h4 a{
 		max-width: 800px;
 	}
 
+	.beauty-figure img {
+		width: 45% !important;
+		height: 55vw !important;
+	}
+
+
 	main section div {
 		margin: auto;
 	}
-
-	/*footer section:first-of-type {
-		max-width: 900px;
-		margin: auto;
-	}*/
 
 	footer section:first-of-type {
 		max-width: 1080px;
@@ -696,95 +804,10 @@ footer h4 a{
 	#desktop-nav {
 		display: flex;
 	}
-
-	/*time {
-		position: absolute;
-		left: 0;
-		transform: rotate(-90deg);
-	}*/
 }
 
 @media (min-width: 905px) {
 	main {
 		max-width: 1080px;
 	}
-}
-
-/*beauty page*/
-
-.beauty-h2 {
-    text-shadow: none;
-    font-size: clamp(1.1em, 4vw, 1.5em);
-    font-weight: 600;
-    letter-spacing: 2px;
-    border-bottom: 3px solid black;
-    padding-bottom: 1em;
-    padding-top: 2em;
-}
-
-.beauty-h3 {
-	text-align: center;
-    max-width: 600px;
-    margin: 2em auto;
-    margin-bottom: 1.5em;
-    text-transform: capitalize;
-}
-
-.beauty-p {
-	font-size: clamp(0.837em, 2vw, 0.837em);
-    text-align: center;
-    font-weight: 500;
-    letter-spacing: .1em;
-}
-
-.beauty-figure img {
-	position: static;
-	height: 25vw;
-}
-
-.beauty-section {
-	margin: 0 auto;
-	padding-top: 1em;
-    border-top: 1px solid black;
-    padding-bottom: 6em;
-}
-
-.beauty-section p {
-	font-size: clamp(0.837em, 2vw, 0.938em);
-}
-
-.beauty-section img {
-	width: 100%;
-    height: 100vw;
-    object-fit: cover;
-}
-
-h4 {
-	text-transform: uppercase;
-	font-family: Poppins, sans-serif;
-	font-weight: 700;
-	font-style: normal;
-	font-size: clamp(1em, 4vw, 1.5em);
-    line-height: 2em;
-}
-
-h5 {
-	text-transform: uppercase;
-    font-family: Poppins, sans-serif;
-    font-weight: 700;
-    font-style: normal;
-    font-size: clamp(1.3em, 4vw, 1.7em);
-    line-height: 2em;
-    text-align: center;
-    margin-top: 1em;
-}
-
-h6 {
-	font-family: gastromond, sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: clamp(1.375em, 3vw, 2em);
-    text-align: center;
-    margin-top: 0;
-    margin-bottom: 0;
 }
